syntax = "proto3";
package orders.transactions.cancel;

import "gogoproto/gogo.proto";

message TransactionRequest{
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_i_d = 2;
  string order_i_d = 3;
}